--- a/etl_extract.ipynb
+++ b/etl_extract.ipynb
@@ -141,17 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "0956150a",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Making directory\n",
     "#save the raw data to a new directory\n",
-    "raw_data.to_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Data\\raw_data\",  index=False)\n",
+    "raw_data.to_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Data\\raw_data\",  index=False)\n",
     "\n",
     "#save the incremental data to a new directory\n",
-    "incremental_data.to_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Data\\incremental_data\", index=False)\n"
+    "incremental_data.to_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Data\\incremental_data\", index=False)\n"
    ]
   }
  ],
