--- a/etl_load.ipynb
+++ b/etl_load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "fb8d6829",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "64071e4a",
    "metadata": {},
    "outputs": [
@@ -53,17 +53,16 @@
     }
    ],
    "source": [
-    "# use pandas.to_parquet() to save the dataframes as parquet files\n",
+    "# Save the dataframes as parquet files\n",
     "raw_df.to_parquet(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Loaded\\transformed_full.parquet\", index=False)\n",
     "incremental_df.to_parquet(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Loaded\\transformed_incremental.parquet\", index=False)\n",
-    "# print a message to confirm that the files have been saved\n",
     "print(\"Dataframes have been successfully saved as parquet files.\")\n",
     "\n",
-    "# preview the stored parquet files\n",
+    "# Preview the stored parquet files\n",
     "raw_df_preview = pd.read_parquet(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Loaded\\transformed_full.parquet\")\n",
     "incremental_df_preview = pd.read_parquet(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Loaded\\transformed_incremental.parquet\")\n",
     "\n",
-    "# print the first few rows of the previewed dataframes\n",
+    "# Print the first few rows of the previewed dataframes\n",
     "print(\"Preview of transformed_full.parquet:\")  \n",
     "print(raw_df_preview.head())\n",
     "print(\"\\nPreview of transformed_incremental.parquet:\")      \n",
