--- a/etl_load.ipynb
+++ b/etl_load.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fb8d6829",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load necessary libraries\n",
     "import pandas as pd\n",
+    "# pip install pyarrow\n",
     "\n",
     "# load the data\n",
     "raw_df= pd.read_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Transformed\\transformed_full.csv\")\n",
