--- a/etl_load.ipynb
+++ b/etl_load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fb8d6829",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "64071e4a",
    "metadata": {},
    "outputs": [
@@ -28,28 +28,34 @@
      "text": [
       "Dataframes have been successfully saved as parquet files.\n",
       "Preview of transformed_full.parquet:\n",
-      "   order_id customer_name  product  quantity  unit_price           order_date  \\\n",
-      "0         4           Eve   Laptop       2.0       750.0  2024-01-07 00:00:00   \n",
-      "1         7       Charlie  Monitor       2.0       750.0  2024-02-02 00:00:00   \n",
-      "2        10           Eve  Monitor       1.0       500.0  2024-02-28 00:00:00   \n",
-      "3        12       Charlie   Tablet       2.0       750.0  2024-03-26 00:00:00   \n",
-      "4        13         Frank   Tablet       1.0       750.0  2024-04-28 00:00:00   \n",
+      "   order_id customer_name product  quantity  unit_price           order_date  \\\n",
+      "0         1         Diana  Tablet  1.959459       500.0  2024-01-20 00:00:00   \n",
+      "1         2           Eve  Laptop  1.959459       500.0  2024-04-29 00:00:00   \n",
+      "2         3       Charlie  Laptop  2.000000       250.0  2024-01-08 00:00:00   \n",
+      "3         4           Eve  Laptop  2.000000       750.0  2024-01-07 00:00:00   \n",
+      "4         5           Eve  Tablet  3.000000       500.0  2024-03-07 00:00:00   \n",
       "\n",
       "   total_price  \n",
-      "0       1500.0  \n",
-      "1       1500.0  \n",
-      "2        500.0  \n",
-      "3       1500.0  \n",
-      "4        750.0  \n",
+      "0    979.72973  \n",
+      "1    979.72973  \n",
+      "2    500.00000  \n",
+      "3   1500.00000  \n",
+      "4   1500.00000  \n",
       "\n",
       "Preview of transformed_incremental.parquet:\n",
       "   order_id customer_name product  quantity  unit_price           order_date  \\\n",
-      "0       105         Heidi  Tablet       2.0       600.0  2024-05-21 00:00:00   \n",
-      "1       109         Grace  Laptop       2.0       600.0  2024-05-29 00:00:00   \n",
+      "0       101         Alice  Laptop       1.5       900.0  2024-05-09 00:00:00   \n",
+      "1       102       Unknown  Laptop       1.0       300.0  2024-05-07 00:00:00   \n",
+      "2       103       Unknown  Laptop       1.0       600.0  2024-05-04 00:00:00   \n",
+      "3       104       Unknown  Tablet       1.5       300.0  2024-05-26 00:00:00   \n",
+      "4       105         Heidi  Tablet       2.0       600.0  2024-05-21 00:00:00   \n",
       "\n",
       "   total_price  \n",
-      "0       1200.0  \n",
-      "1       1200.0  \n"
+      "0       1350.0  \n",
+      "1        300.0  \n",
+      "2        600.0  \n",
+      "3        450.0  \n",
+      "4       1200.0  \n"
      ]
     }
    ],
