--- a/etl_transform.ipynb
+++ b/etl_transform.ipynb
@@ -2,10 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "id": "512d453f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw Data:\n",
+      "   order_id customer_name product  quantity  unit_price  order_date region\n",
+      "0         1         Diana  Tablet       NaN       500.0  2024-01-20  South\n",
+      "1         2           Eve  Laptop       NaN         NaN  2024-04-29  North\n",
+      "2         3       Charlie  Laptop       2.0       250.0  2024-01-08    NaN\n",
+      "3         4           Eve  Laptop       2.0       750.0  2024-01-07   West\n",
+      "4         5           Eve  Tablet       3.0         NaN  2024-03-07  South\n",
+      "\n",
+      "Incremental Data:\n",
+      "   order_id customer_name product  quantity  unit_price  order_date   region\n",
+      "0       101         Alice  Laptop       NaN       900.0  2024-05-09  Central\n",
+      "1       102           NaN  Laptop       1.0       300.0  2024-05-07  Central\n",
+      "2       103           NaN  Laptop       1.0       600.0  2024-05-04  Central\n",
+      "3       104           NaN  Tablet       NaN       300.0  2024-05-26  Central\n",
+      "4       105         Heidi  Tablet       2.0       600.0  2024-05-21    North\n"
+     ]
+    }
+   ],
    "source": [
     "# Load libraries\n",
     "import pandas as pd\n",
@@ -15,7 +37,12 @@
     "raw_data = pd.read_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM/raw_data.csv\")\n",
     "\n",
     "# load the incremental data\n",
-    "incremental_data = pd.read_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM/incremental_data.csv\")"
+    "incremental_data = pd.read_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM/incremental_data.csv\")\n",
+    "\n",
+    "print(\"Raw Data:\")\n",
+    "print(raw_data.head()) \n",
+    "print(\"\\nIncremental Data:\")\n",
+    "print(incremental_data.head())"
    ]
   },
   {
@@ -36,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "id": "af5de3e2",
    "metadata": {},
    "outputs": [
@@ -44,7 +71,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transformed raw data: Missing values and duplicates handled.\n"
+      "\n",
+      "Missing Values in Raw Data:\n",
+      "customer_name     1\n",
+      "quantity         26\n",
+      "unit_price       35\n",
+      "order_date        1\n",
+      "region           25\n",
+      "dtype: int64\n",
+      "\n",
+      "Duplicates in Raw Data:\n",
+      "1\n",
+      "\n",
+      "Transformed Raw Data after handling missing values and duplicates:\n",
+      "   order_id customer_name product  quantity  unit_price  order_date   region\n",
+      "0         1         Diana  Tablet  1.959459       500.0  2024-01-20    South\n",
+      "1         2           Eve  Laptop  1.959459       500.0  2024-04-29    North\n",
+      "2         3       Charlie  Laptop  2.000000       250.0  2024-01-08  Unknown\n",
+      "3         4           Eve  Laptop  2.000000       750.0  2024-01-07     West\n",
+      "4         5           Eve  Tablet  3.000000       500.0  2024-03-07    South\n"
      ]
     }
    ],
@@ -53,14 +98,34 @@
     "transfromed_rfull_data = raw_data.copy()\n",
     "\n",
     "# Transform 1: Handle missing values and duplicates\n",
-    "transfromed_rfull_data.dropna(inplace=True)  # Drop rows with any missing values\n",
-    "transfromed_rfull_data.drop_duplicates(inplace=True)  # Drop duplicate rows\n",
-    "print(\"Transformed raw data: Missing values and duplicates handled.\")  "
+    "# checking for missing values\n",
+    "missing_values = transfromed_rfull_data.isnull().sum()\n",
+    "print(\"\\nMissing Values in Raw Data:\")\n",
+    "print(missing_values[missing_values > 0])\n",
+    "\n",
+    "# checking for duplicates\n",
+    "duplicates = transfromed_rfull_data.duplicated().sum()\n",
+    "print(\"\\nDuplicates in Raw Data:\")\n",
+    "print(duplicates)\n",
+    "\n",
+    "# fill missing values for categorical columns with 'Unknown'\n",
+    "for col in ['customer_name', 'product', 'region']:\n",
+    "\ttransfromed_rfull_data[col].fillna('Unknown', inplace=True)\n",
+    "\n",
+    "# fill missing values for numerical columns with their mean\n",
+    "for col in ['quantity', 'unit_price']:\n",
+    "\ttransfromed_rfull_data[col].fillna(transfromed_rfull_data[col].mean(), inplace=True)\n",
+    "\n",
+    "# drop duplicates\n",
+    "transfromed_rfull_data.drop_duplicates(inplace=True)\n",
+    "print(\"\\nTransformed Raw Data after handling missing values and duplicates:\")\n",
+    "print(transfromed_rfull_data.head())\n",
+    "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "id": "359c3617",
    "metadata": {},
    "outputs": [
@@ -69,19 +134,19 @@
      "output_type": "stream",
      "text": [
       "Total price calculated and added to the dataset.\n",
-      "    order_id customer_name  product  quantity  unit_price  \\\n",
-      "3          4           Eve   Laptop       2.0       750.0   \n",
-      "6          7       Charlie  Monitor       2.0       750.0   \n",
-      "9         10           Eve  Monitor       1.0       500.0   \n",
-      "11        12       Charlie   Tablet       2.0       750.0   \n",
-      "12        13         Frank   Tablet       1.0       750.0   \n",
+      "   order_id customer_name product  quantity  unit_price           order_date  \\\n",
+      "0         1         Diana  Tablet  1.959459       500.0  2024-01-20 00:00:00   \n",
+      "1         2           Eve  Laptop  1.959459       500.0  2024-04-29 00:00:00   \n",
+      "2         3       Charlie  Laptop  2.000000       250.0  2024-01-08 00:00:00   \n",
+      "3         4           Eve  Laptop  2.000000       750.0  2024-01-07 00:00:00   \n",
+      "4         5           Eve  Tablet  3.000000       500.0  2024-03-07 00:00:00   \n",
       "\n",
-      "             order_date  total_price  \n",
-      "3   2024-01-07 00:00:00       1500.0  \n",
-      "6   2024-02-02 00:00:00       1500.0  \n",
-      "9   2024-02-28 00:00:00        500.0  \n",
-      "11  2024-03-26 00:00:00       1500.0  \n",
-      "12  2024-04-28 00:00:00        750.0  \n"
+      "   total_price  \n",
+      "0    979.72973  \n",
+      "1    979.72973  \n",
+      "2    500.00000  \n",
+      "3   1500.00000  \n",
+      "4   1500.00000  \n"
      ]
     }
    ],
@@ -104,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "id": "9333b005",
    "metadata": {},
    "outputs": [],
@@ -123,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "id": "f2818584",
    "metadata": {},
    "outputs": [
@@ -131,15 +196,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transformed incremental data: Missing values and duplicates handled.\n",
+      "\n",
+      "Missing Values in Raw Data:\n",
+      "customer_name    6\n",
+      "quantity         4\n",
+      "region           2\n",
+      "dtype: int64\n",
+      "\n",
+      "Duplicates in Raw Data:\n",
+      "0\n",
+      "\n",
+      "Transformed Raw Data after handling missing values and duplicates:\n",
       "Total price calculated and added to the incremental dataset.\n",
       "   order_id customer_name product  quantity  unit_price           order_date  \\\n",
+      "0       101         Alice  Laptop       1.5       900.0  2024-05-09 00:00:00   \n",
+      "1       102       Unknown  Laptop       1.0       300.0  2024-05-07 00:00:00   \n",
+      "2       103       Unknown  Laptop       1.0       600.0  2024-05-04 00:00:00   \n",
+      "3       104       Unknown  Tablet       1.5       300.0  2024-05-26 00:00:00   \n",
       "4       105         Heidi  Tablet       2.0       600.0  2024-05-21 00:00:00   \n",
-      "8       109         Grace  Laptop       2.0       600.0  2024-05-29 00:00:00   \n",
       "\n",
       "   total_price  \n",
-      "4       1200.0  \n",
-      "8       1200.0  \n"
+      "0       1350.0  \n",
+      "1        300.0  \n",
+      "2        600.0  \n",
+      "3        450.0  \n",
+      "4       1200.0  \n"
      ]
     }
    ],
@@ -148,9 +229,28 @@
     "transformed_incremental_data = incremental_data.copy()\n",
     "\n",
     "# Transform 1: Handle missing values and duplicates\n",
-    "transformed_incremental_data.dropna(inplace=True)  # Drop rows with any missing values\n",
-    "transformed_incremental_data.drop_duplicates(inplace=True)  # Drop duplicate rows\n",
-    "print(\"Transformed incremental data: Missing values and duplicates handled.\")\n",
+    "# checking for missing values\n",
+    "missing_values = transformed_incremental_data.isnull().sum()\n",
+    "print(\"\\nMissing Values in Raw Data:\")\n",
+    "print(missing_values[missing_values > 0])\n",
+    "\n",
+    "# checking for duplicates\n",
+    "duplicates = transformed_incremental_data.duplicated().sum()\n",
+    "print(\"\\nDuplicates in Raw Data:\")\n",
+    "print(duplicates)\n",
+    "\n",
+    "# fill missing values for categorical columns with 'Unknown'\n",
+    "for col in ['customer_name', 'product', 'region']:\n",
+    "\ttransformed_incremental_data[col].fillna('Unknown', inplace=True)\n",
+    "\n",
+    "# fill missing values for numerical columns with their mean\n",
+    "for col in ['quantity', 'unit_price']:\n",
+    "\ttransformed_incremental_data[col].fillna(transformed_incremental_data[col].mean(), inplace=True)\n",
+    "\n",
+    "# drop duplicates\n",
+    "transformed_incremental_data.drop_duplicates(inplace=True)\n",
+    "print(\"\\nTransformed Raw Data after handling missing values and duplicates:\")\n",
+    "\n",
     "\n",
     "# Transformation 2: Enrichment - Total Price Calculation\n",
     "transformed_incremental_data['total_price'] = transformed_incremental_data['quantity'] * transformed_incremental_data['unit_price']\n",
@@ -169,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "id": "0bcb143a",
    "metadata": {},
    "outputs": [],
