--- a/etl_transform.ipynb
+++ b/etl_transform.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "f2818584",
    "metadata": {},
    "outputs": [
@@ -208,12 +208,12 @@
       "\n",
       "Transformed Raw Data after handling missing values and duplicates:\n",
       "Total price calculated and added to the incremental dataset.\n",
-      "   order_id customer_name product  quantity  unit_price           order_date  \\\n",
-      "0       101         Alice  Laptop       1.5       900.0  2024-05-09 00:00:00   \n",
-      "1       102       Unknown  Laptop       1.0       300.0  2024-05-07 00:00:00   \n",
-      "2       103       Unknown  Laptop       1.0       600.0  2024-05-04 00:00:00   \n",
-      "3       104       Unknown  Tablet       1.5       300.0  2024-05-26 00:00:00   \n",
-      "4       105         Heidi  Tablet       2.0       600.0  2024-05-21 00:00:00   \n",
+      "   order_id product  quantity  unit_price           order_date   region  \\\n",
+      "0       101  Laptop       1.5       900.0  2024-05-09 00:00:00  Central   \n",
+      "1       102  Laptop       1.0       300.0  2024-05-07 00:00:00  Central   \n",
+      "2       103  Laptop       1.0       600.0  2024-05-04 00:00:00  Central   \n",
+      "3       104  Tablet       1.5       300.0  2024-05-26 00:00:00  Central   \n",
+      "4       105  Tablet       2.0       600.0  2024-05-21 00:00:00    North   \n",
       "\n",
       "   total_price  \n",
       "0       1350.0  \n",
@@ -261,7 +261,7 @@
     "transformed_incremental_data['order_date'] = transformed_incremental_data['order_date'].dt.strftime('%Y-%m-%d %H:%M:%S')    \n",
     "\n",
     "# Transformation 4: Filtering - Drop Unnecessary Columns\n",
-    "columns_to_drop = ['region']  # Example columns to drop\n",
+    "columns_to_drop = ['customer_name']  # Example columns to drop\n",
     "transformed_incremental_data.drop(columns=columns_to_drop, inplace=True, errors='ignore')\n",
     "\n",
     "print(transformed_incremental_data.head())"
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "0bcb143a",
    "metadata": {},
    "outputs": [],
