--- a/etl_extract.ipynb
+++ b/etl_extract.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "eed8c0ae",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "513307e4",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "2a036c24",
    "metadata": {},
    "outputs": [
@@ -141,17 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "0956150a",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Making directory\n",
     "#save the raw data to a new directory\n",
-    "raw_data.to_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Data\\raw_data\",  index=False)\n",
+    "raw_data.to_csv(\"Data/raw_data.csv\",  index=False)\n",
     "\n",
     "#save the incremental data to a new directory\n",
-    "incremental_data.to_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Data\\incremental_data\", index=False)\n"
+    "incremental_data.to_csv(\"Data/incremental_data.csv\", index=False)\n"
    ]
   }
  ],
