--- a/etl_transform.ipynb
+++ b/etl_transform.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "512d453f",
    "metadata": {},
    "outputs": [
@@ -34,10 +34,10 @@
     "from datetime import datetime\n",
     "\n",
     "# load the raw data\n",
-    "raw_data = pd.read_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM/raw_data.csv\")\n",
+    "raw_data = pd.read_csv(\"Data/raw_data.csv\")\n",
     "\n",
     "# load the incremental data\n",
-    "incremental_data = pd.read_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM/incremental_data.csv\")\n",
+    "incremental_data = pd.read_csv(\"Data/incremental_data.csv\")\n",
     "\n",
     "print(\"Raw Data:\")\n",
     "print(raw_data.head()) \n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "af5de3e2",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "359c3617",
    "metadata": {},
    "outputs": [
@@ -169,13 +169,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "9333b005",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save the transformed raw data\n",
-    "transfromed_rfull_data.to_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Transformed\\transformed_full.csv\", index=False)"
+    "transfromed_rfull_data.to_csv(\"Transformed/transformed_full.csv\", index=False)"
    ]
   },
   {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "f2818584",
    "metadata": {},
    "outputs": [
@@ -269,13 +269,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "0bcb143a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save the transformed incremental data\n",
-    "transformed_incremental_data.to_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Transformed\\transformed_incremental.csv\", index=False)"
+    "transformed_incremental_data.to_csv(\"Transformed/transformed_incremental.csv\", index=False)"
    ]
   }
  ],
