--- a/etl_load.ipynb
+++ b/etl_load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "fb8d6829",
    "metadata": {},
    "outputs": [],
@@ -12,13 +12,13 @@
     "# pip install pyarrow\n",
     "\n",
     "# load the data\n",
-    "raw_df= pd.read_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Transformed\\transformed_full.csv\")\n",
-    "incremental_df = pd.read_csv(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Transformed\\transformed_incremental.csv\")"
+    "raw_df= pd.read_csv(\"Transformed/transformed_full.csv\")\n",
+    "incremental_df = pd.read_csv(\"Transformed/transformed_incremental.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "64071e4a",
    "metadata": {},
    "outputs": [
@@ -43,12 +43,12 @@
       "4   1500.00000  \n",
       "\n",
       "Preview of transformed_incremental.parquet:\n",
-      "   order_id customer_name product  quantity  unit_price           order_date  \\\n",
-      "0       101         Alice  Laptop       1.5       900.0  2024-05-09 00:00:00   \n",
-      "1       102       Unknown  Laptop       1.0       300.0  2024-05-07 00:00:00   \n",
-      "2       103       Unknown  Laptop       1.0       600.0  2024-05-04 00:00:00   \n",
-      "3       104       Unknown  Tablet       1.5       300.0  2024-05-26 00:00:00   \n",
-      "4       105         Heidi  Tablet       2.0       600.0  2024-05-21 00:00:00   \n",
+      "   order_id product  quantity  unit_price           order_date   region  \\\n",
+      "0       101  Laptop       1.5       900.0  2024-05-09 00:00:00  Central   \n",
+      "1       102  Laptop       1.0       300.0  2024-05-07 00:00:00  Central   \n",
+      "2       103  Laptop       1.0       600.0  2024-05-04 00:00:00  Central   \n",
+      "3       104  Tablet       1.5       300.0  2024-05-26 00:00:00  Central   \n",
+      "4       105  Tablet       2.0       600.0  2024-05-21 00:00:00    North   \n",
       "\n",
       "   total_price  \n",
       "0       1350.0  \n",
@@ -61,13 +61,13 @@
    ],
    "source": [
     "# Save the dataframes as parquet files\n",
-    "raw_df.to_parquet(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Loaded\\transformed_full.parquet\", index=False)\n",
-    "incremental_df.to_parquet(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Loaded\\transformed_incremental.parquet\", index=False)\n",
+    "raw_df.to_parquet(\"Loaded/transformed_full.parquet\", index=False)\n",
+    "incremental_df.to_parquet(\"Loaded/transformed_incremental.parquet\", index=False)\n",
     "print(\"Dataframes have been successfully saved as parquet files.\")\n",
     "\n",
     "# Preview the stored parquet files\n",
-    "raw_df_preview = pd.read_parquet(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Loaded\\transformed_full.parquet\")\n",
-    "incremental_df_preview = pd.read_parquet(r\"C:\\Users\\Makena\\OneDrive\\Desktop\\USIU\\2nd Summer sem\\DWM\\Mid Sem\\Loaded\\transformed_incremental.parquet\")\n",
+    "raw_df_preview = pd.read_parquet(\"Loaded/transformed_full.parquet\")\n",
+    "incremental_df_preview = pd.read_parquet(\"Loaded/transformed_incremental.parquet\")\n",
     "\n",
     "# Print the first few rows of the previewed dataframes\n",
     "print(\"Preview of transformed_full.parquet:\")  \n",
